--- a/src/package.json
+++ b/src/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^4.3.1",
     "browserify": "^16.2.3",
     "core-js": "^3.2.1",
+    "fetch-ie8": "^1.5.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-pug": "^4.0.1",
