Makes the presence of almost all screen objects configurable.

--- a/config.json
+++ b/config.json
@@ -1,3 +1,9 @@
 {
-  "defaultLanguage": "en"
+  "defaultLanguage": "en",
+  "showInfoButton": true,
+  "showConfigButton": true,
+  "showFullScreenButton": true,
+  "showInputKeys": true,
+  "showInputKeysText": true,
+  "showInputInstructions": true
 }
